--- a/apps/css/index.css
+++ b/apps/css/index.css
@@ -24,8 +24,7 @@ h1 {
 }
 
 .box > div {
-  background-color: #ffffff;
-  border: 1px solid #ddd;
+  background-color: #000000;
   padding: 20px;
   border-radius: 8px;
   box-shadow: 0 2px 4px rgba(0,0,0,0.1);
@@ -40,12 +39,12 @@ button {
   padding: 8px 12px;
   border: none;
   border-radius: 4px;
-  background-color: #0078D4;
-  color: white;
+  background-color: #00ff00;
+  color: rgb(0, 0, 0);
   cursor: pointer;
   transition: background-color 0.3s ease;
 }
 
 button:hover {
-  background-color: #005ea6;
+  background-color: #00a700;
 }
