--- a/apps/css/index.css
+++ b/apps/css/index.css
@@ -25,7 +25,7 @@ h1 {
 
 .box > div {
   background-color: #000000;
-  color: white;
+  color: 00ff00;
   border: 2px solid #00ff00;
   padding: 20px;
   border-radius: 5px;
